20200815 內頁增加左欄

--- a/sass/hyui.scss
+++ b/sass/hyui.scss
@@ -50,6 +50,7 @@
 @import "page/_fp";						//Forward
 @import "page/_qp";						//QP
 @import "page/_sitemap";				//Sitemap
+@import "page/_left_block";				//左欄left_block
 
 // 外掛
 @import "sass/_slick";					//slick
