--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -52,5 +52,21 @@ body {
     }
     >.container {
         @include gutter(); //gutter 代表左右要留白
+        // display: flex;
+        
+    }
+    .left_block {
+        // flex:0 0 260px;
+        // max-width: 260px;
+        float: left;
+        width: 260px;
+        margin-right: 40px;
+        @include screen('tablet') {
+            display: none;
+        }
+    }
+    .center_block {
+        // flex:auto;
+        overflow: hidden;
     }
 }
