--- a/sass/sass/_grid.scss
+++ b/sass/sass/_grid.scss
@@ -147,6 +147,18 @@
     }
 }
 
+// 測試 display: grid
+.grid-test{}
+
+.Grid-set{
+    -ms-display: grid;
+    display: grid;
+    justify-content: center;
+    .col{
+
+    }
+}
+
 //測試、可塞主標題
 .customize-1,
 .customize-2,
@@ -691,6 +703,7 @@
 }
 .customize-free3{
     .Flex-set{
+        // justify-content: flex-start;
         justify-content: center;
         .box{
 
@@ -707,7 +720,8 @@
 
 .customize-free4{
     .Flex-set{
-        justify-content: center;
+        // justify-content: center;
+        justify-content: flex-start;
         background: #eee;
 
         .left{
@@ -730,7 +744,7 @@
         }
         .col{
             // 欄數, 欄寬（margin-gutter）
-            @include flex-layout-free(3, 10px);
+            @include flex-layout-free(3, 4px);
 
             // 自定義 ----------------- start
             background: #009688;
@@ -739,6 +753,28 @@
             color: #fff;
             @include gutter(40px);
             // ---------------------- end
+
+            @include screen('mobile') {
+                // 欄數, 欄寬（margin-gutter）
+                @include flex-layout-free(6, 10px);
+            }
+        }
+        .col2{
+            // 欄數, 欄寬（margin-gutter）
+            @include flex-layout-free(2, 4px);
+
+            // 自定義 ----------------- start
+            background: #009688;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            color: #fff;
+            @include gutter(40px);
+            // ---------------------- end
+
+            @include screen('mobile') {
+                // 欄數, 欄寬（margin-gutter）
+                @include flex-layout-free(6, 10px);
+            }
         }
     }
 }
@@ -769,31 +805,3 @@
         }
     }
 }
-
-// .customize-3{
-//     .Flex-set{
-//         // 方向、是否斷點
-//         flex-flow: row wrap;
-
-//         .thumbnail{
-//             // 欄數, 欄寬（margin-gutter）
-//             @include flex-layout(3, 20px);
-
-//             // 自定義 ----------------- start
-//             background: #fff;
-//             color: #222;
-//             margin-top: .5em;
-//             margin-bottom: .5em;
-//             @include gutter(0px);
-//             // ---------------------- end
-//         }
-
-//         @include screen('tablet') {
-//             @include gutter(60px);
-//             .col{
-//                 // 欄數, 欄寬（margin-gutter）
-//                 @include flex-layout(2, 1%);
-//             }
-//         }
-//     }
-// }
